--- a/client/pom.xml
+++ b/client/pom.xml
@@ -1,8 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>com.github.atcw</groupId>
     <artifactId>Buchstabenmagie-Client</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <packaging>jar</packaging>
     <name>Buchstabenmagie-Client</name>
     <properties>
@@ -10,12 +23,6 @@
             UTF-8
         </project.build.sourceEncoding>
     </properties>
-
-    <parent>
-        <groupId>com.github.atcw</groupId>
-        <artifactId>Buchstabenmagie</artifactId>
-        <version>LATEST</version>
-    </parent>
 
     <dependencies>
         <dependency>
