--- a/server/pom.xml
+++ b/server/pom.xml
@@ -1,8 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>com.github.atcw</groupId>
     <artifactId>Buchstabenmagie-Server</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <packaging>jar</packaging>
     <name>Buchstabenmagie-Server</name>
     <properties>
@@ -11,17 +24,26 @@
         </project.build.sourceEncoding>
     </properties>
 
-    <parent>
-        <groupId>com.github.atcw</groupId>
-        <artifactId>Buchstabenmagie</artifactId>
-        <version>LATEST</version>
-    </parent>
-
     <dependencies>
         <dependency>
             <groupId>com.github.atcw</groupId>
             <artifactId>Buchstabenmagie-Shared</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.thorbenkuck</groupId>
+            <artifactId>NetCom2</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>25.1-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.2.0</version>
         </dependency>
     </dependencies>
 </project>
